--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "node-sass": "^7.0.1",
+    "prop-types": "15.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-paginate": "^8.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
