--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/redux-form": "^8.3.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
@@ -23,6 +24,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.1.0",
     "redux": "^4.2.0",
     "redux-form": "^8.3.8",
     "redux-thunk": "^2.4.1",
